--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Baltazar Rodriguez Ramirez</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	Hola mundo
+
+	<!--MENU BAR-->
+     <div class="container">
+        <nav class="navbar navbar-inverse navbar-static-top">
+         <div class="container">
+           <div id="navbar" class="navbar-collapse collapse navbar_container">
+              <ul class="nav navbar-nav">
+                <li><a href="#">About me</a></li>
+                <li><a href="#profession">My Profession</a></li>
+                <li><a href="#skills">My Skills</a></li>
+                <li><a href="#projects">My Projects</a></li>
+                <li><a href="#hobbies">My Hobbies</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+     </div>
+	
+	<!--<div class="container">
+		<div class="header_navbar">
+			<ul class="b_navbar">
+				<li class="b_navbar_item"><a href="" title="About me">About me</a></li>
+				<li class="b_navbar_item"><a href="" title="What I am">What I am</a></li>
+				<li class="b_navbar_item"><a href="" title="My Portafolio">My Portafolio</a></li>
+				<li class="b_navbar_item"><a href="" title="My Hobbies">My hobbies</a></li>
+			</ul>
+		</div>		
+	</div>-->
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
