Image added and AboutMe section added

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-	<!--MENU BAR-->
+	 <!--MENU BAR-->
      <div class="container">
         <nav class="navbar navbar-inverse navbar-static-top">
          <div class="container">
-           <div id="navbar" class="navbar-collapse collapse navbar_container">
+           <div id="navbar" class="navbar-collapse collapse navbar-container">
               <ul class="nav navbar-nav">
-                <li><a href="#">About me</a></li>
+                <li><a href="#me">About me</a></li>
                 <li><a href="#profession">My Profession</a></li>
                 <li><a href="#skills">My Skills</a></li>
                 <li><a href="#projects">My Projects</a></li>
@@ -25,17 +25,38 @@
           </div>
         </nav>
      </div>
-	
-	<!--<div class="container">
-		<div class="header_navbar">
-			<ul class="b_navbar">
-				<li class="b_navbar_item"><a href="" title="About me">About me</a></li>
-				<li class="b_navbar_item"><a href="" title="What I am">What I am</a></li>
-				<li class="b_navbar_item"><a href="" title="My Portafolio">My Portafolio</a></li>
-				<li class="b_navbar_item"><a href="" title="My Hobbies">My hobbies</a></li>
-			</ul>
-		</div>		
-	</div>-->
+
+     <!--IMAGE-->
+     <div class="container center">
+     	<h1>Hi, my name is Baltazar</h1>
+     	<img src="images/image_me.jpg" class="img-circle profile-image" alt="Cinque Terre">
+     </div>
+
+     <!--ABOUT ME-->
+     <div class="container container-margin">
+     	<nav class="navbar navbar-inverse navbar-static-top">
+     		<div class="container">
+     			<h1 class="section-text-color">About me</h1>
+     		</div>
+     	</nav>
+     	<div class="container">
+     		<p class="paragraph-text">Hi, my name is Baltazar Rodriguez Ramirez. I am from Tecoman, Colima in Mexico country. It is a complicated place that has a lot of problems, but the good thing there is that in Tecoman there is a lot of tacos stalls.</p>
+     		<p class="paragraph-text">When I was a kid I always felt curiosity by computers, because I thought that they were wonderful. It was wonderful to think in the world of possibilities that can arise in only one and small machine. Be able to process information and then present it to the people in a way that they can understan. And not only be able to show information to people is greate, also make aplications that can do their lives more simple is realy awesome.</p>
+			<p class="paragraph-text">I want to create amazing aplications.</p>
+     	</div>
+     </div>
+
+     <!--MY PROFESSION-->
+     <div class="container container-margin">
+     	<nav class="navbar navbar-inverse navbar-static-top">
+     		<div class="container">
+     			<h1 class="section-text-color">My Profession</h1>
+     		</div>
+     	</nav>
+     	<div class="container">
+     		
+     	</div>
+     </div>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
