Skills section added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
            <div id="navbar" class="navbar-collapse collapse navbar-container">
               <ul class="nav navbar-nav">
                 <li><a href="#me">About me</a></li>
-                <li><a href="#profession">My Profession</a></li>
                 <li><a href="#skills">My Skills</a></li>
                 <li><a href="#projects">My Projects</a></li>
                 <li><a href="#hobbies">My Hobbies</a></li>
@@ -50,13 +49,37 @@
      <div class="container container-margin">
      	<nav class="navbar navbar-inverse navbar-static-top">
      		<div class="container">
-     			<h1 class="section-text-color">My Profession</h1>
+     			<h1 class="section-text-color">My Skills</h1>
      		</div>
      	</nav>
-     	<div class="container">
+     	<div class="container center">
+     		<ul class="develop-skills">
+     			<li><img class="img-skills" src="images/img-android.jpg" alt=""></li>
+     			<li><img class="img-skills" src="images/img-java.png" alt=""></li>
+     			<li><img class="img-skills" src="images/img-git.png" alt=""></li>
+     			<li><img class="img-skills" src="images/img-html.png" alt=""></li>
+     			<li><img class="img-skills" src="images/img-css.jpg" alt=""></li>
+     		</ul>
+     	</div>
+     </div>
+
+     <!--MY PROJECTS-->
+     <div class="container container-margin">
+     	<nav class="navbar navbar-inverse navbar-static-top">
+     		<div class="container">
+     			<h1 class="section-text-color">My Skills</h1>
+     		</div>
+     	</nav>
+     	<div class="container center">
      		
      	</div>
      </div>
+
+    <footer>
+  		<p>Baltazar Rodriguez Ramirez</p>
+  		<p>Contact information: <a href="mailto:someone@example.com">
+  		archerbaltazar@gmail.com</a>.</p>
+	</footer>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
