--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Baltazar Rodriguez Ramirez</title>
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -67,11 +68,65 @@
      <div class="container container-margin">
      	<nav class="navbar navbar-inverse navbar-static-top">
      		<div class="container">
-     			<h1 class="section-text-color">My Skills</h1>
+     			<h1 class="section-text-color">My Projects</h1>
      		</div>
      	</nav>
-     	<div class="container center">
-     		
+     	<div class="container">
+     		<p class="paragraph-text">All the projects in which I participated have been developed in Andriod.</p><br>
+     		<table class="table">
+     			<tbody>
+     				<tr>
+     					<td class="table-td-strong cursor-pointer" id="app_01" onclick="showHide('app_description_01')">IDareYouToBeAwesome</td>
+     				</tr>
+     				<tr id="app_description_01" class="table-tr-hide">
+     					<td>
+     						<div>
+     							<p class="paragraph-text">App for challenges in GDL city.</p>
+     						</div>
+     					</td>
+     				</tr>
+     				<tr>
+     					<td class="table-td-strong cursor-pointer" id="app_02" onclick="showHide('app_description_02')">CORRUPTOUR</td>
+     				</tr>
+     				<tr id="app_description_02" class="table-tr-hide">
+     					<td>
+     						<div>
+     							<p class="paragraph-text">App that shows a tour of the most controversial places in Mexico City.</p>
+     						</div>
+     					</td>
+     				</tr>
+     				<tr>
+     					<td class="table-td-strong cursor-pointer" id="app_03" onclick="showHide('app_description_03')">HAUSPA</td>
+     				</tr>
+     				<tr id="app_description_03" class="table-tr-hide">
+     					<td>
+     						<div>
+     							<p class="paragraph-text">App to request a massage service in Mexico City.</p>
+     						</div>
+     					</td>
+     				</tr>
+     				<tr>
+     					<td class="table-td-strong cursor-pointer" id="app_04" onclick="showHide('app_description_04')">ICARE-V2</td>
+     				</tr>
+     				<tr id="app_description_04" class="table-tr-hide">
+     					<td>
+     						<div>
+     							<p class="paragraph-text">App to be monitoring a patient in a tablet.</p>
+     						</div>
+     					</td>
+     				</tr>
+     				<tr>
+     					<td class="table-td-strong cursor-pointer" id="app_05" onclick="showHide('app_description_05')">DEMOPERU</td>
+     				</tr>
+     				<tr id="app_description_05" class="table-tr-hide">
+     					<td>
+     						<div>
+     							<p class="paragraph-text"> Demo app for AppDataMx.</p>
+     						</div>
+     					</td>
+     				</tr>
+     			</tbody>
+     		</table>
      	</div>
      </div>
 
@@ -82,5 +137,6 @@
 	</footer>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="javascript.js" type="text/javascript"></script>
 </body>
 </html>
