--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           		</div>
         	</nav>
      	</div>
-     </header><!-- /header -->
+     </header>
 
      <!--IMAGE-->
-     <div class="container center">
+     <div class="container center back-image">
      	<h1 class="container-margin">Hi, my name is Baltazar</h1>
      	<img src="images/image_me.jpg" class="img-circle profile-image" alt="Cinque Terre">
      </div>
@@ -164,7 +164,6 @@
   		</div>
 	</footer>
 
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="javascript.js" type="text/javascript"></script>
 </body>
 </html>
