working on menu bar

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
      		</div>
      	</nav>
      	<div class="container">
-     		<p class="paragraph-text">All the projects in which I participated have been developed in Andriod.</p><br>
+     		<p class="paragraph-text">I have participated in several projects developed in Android</p><br>
      		<table class="table">
      			<tbody>
      				<tr>
