Problem with the nav bar solved

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      </div>
 
      <!--ABOUT ME-->
-     <div class="container container-margin" id="aboutMe">
+     <div class="container container-padding-top" id="aboutMe">
      	<nav class="navbar navbar-inverse navbar-static-top">
      		<div class="container">
      			<h1 class="section-text-color">About me</h1>
@@ -47,7 +47,7 @@
      </div>
 
      <!--MY SKILLS-->
-     <div class="container container-margin" id="mySkills">
+     <div class="container container-padding-top" id="mySkills">
      	<nav class="navbar navbar-inverse navbar-static-top">
      		<div class="container">
      			<h1 class="section-text-color">My Skills</h1>
@@ -65,7 +65,7 @@
      </div>
 
      <!--MY PROJECTS-->
-     <div class="container container-margin" id="myProjects">
+     <div class="container container-padding-top" id="myProjects">
      	<nav class="navbar navbar-inverse navbar-static-top">
      		<div class="container">
      			<h1 class="section-text-color">My Projects</h1>
@@ -131,7 +131,7 @@
      </div>
 
      <!--MY HOOBIES-->
-     <div class="container container-margin" id="myHoobies">
+     <div class="container container-padding-top" id="myHoobies">
      	<nav class="navbar navbar-inverse navbar-static-top">
      		<div class="container">
      			<h1 class="section-text-color">My Hoobies</h1>
@@ -159,7 +159,7 @@
      </div>
 
     <footer class="footer">
-  		<div class="container container-margin">
+  		<div class="container container-padding-top">
   			<span class="text-muted">Baltazar Rodriguez Ramirez</span class="text-muted">
   		</div>
 	</footer>
