--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<title>Baltazar Rodriguez Ramirez</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/load_style.css">
 </head>
 <body>
 
@@ -54,13 +55,21 @@
      		</div>
      	</nav>
      	<div class="container center">
-     		<ul class="develop-skills">
-     			<li><img class="img-skills" src="images/img-android.jpg" alt=""></li>
-     			<li><img class="img-skills" src="images/img-java.png" alt=""></li>
-     			<li><img class="img-skills" src="images/img-git.png" alt=""></li>
-     			<li><img class="img-skills" src="images/img-html.png" alt=""></li>
-     			<li><img class="img-skills" src="images/img-css.jpg" alt=""></li>
-     		</ul>
+     		<div class="avatar-container p-61">
+  				<img src="images/img-android.jpg" alt="" class="avatar"/>
+			</div>
+			<div class="avatar-container p-60">
+  				<img src="images/img-java.jpg" alt="" class="avatar"/>
+			</div>
+			<div class="avatar-container p-65">
+  				<img src="images/img-git.jpg" alt="" class="avatar"/>
+			</div>
+			<div class="avatar-container p-40">
+  				<img src="images/img-html.jpg" alt="" class="avatar"/>
+			</div>
+			<div class="avatar-container p-30">
+  				<img src="images/img-css.jpg" alt="" class="avatar"/>
+			</div>
      	</div>
      </div>
 
@@ -138,20 +147,20 @@
      		</div>
      	</nav>
      	<div class="container center">
-     		<ul class="develop-skills">
+     		<ul class="hobbies">
      			<li>     				
      				<a href="https://playoverwatch.com/es-es/" title="Overwatch">
-     					<img class="img-skills img-circle profile-image" src="images/img-ov.jpg" alt="">
+     					<img class="img-hobbies img-circle profile-image" src="images/img-ov.jpg" alt="">
      				</a>
      			</li>
      			<li>
      				<a href="http://www.animeid.tv/" title="Anime">
-     					<img class="img-skills img-circle profile-image" src="images/img-anime.jpg" alt="">
+     					<img class="img-hobbies img-circle profile-image" src="images/img-anime.jpg" alt="">
      				</a>
      			</li>
      			<li>
      				<a href="http://kisscartoon.se/" title="Cartoons">
-     					<img class="img-skills img-circle profile-image" src="images/img-cartoons.jpg" alt="">
+     					<img class="img-hobbies img-circle profile-image" src="images/img-cartoons.jpg" alt="">
      				</a>     				
      			</li>
      		</ul>
@@ -164,6 +173,8 @@
   		</div>
 	</footer>
 
-	<script src="javascript.js" type="text/javascript"></script>
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	<script src="js/javascript.js" type="text/javascript"></script>
+	<script src="js/load.js" type="text/javascript"></script>
 </body>
 </html>
