--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         	<nav class="navbar navbar-inverse navbar-fixed-top sticky">
          		<div class="container navbar-container">
               		<ul class="nav navbar-nav">
-                		<li><a href="#me" onclick="moveTo('aboutMe')">About me</a></li>
-                		<li><a href="#skills" onclick="moveTo('mySkills')">My Skills</a></li>
-                		<li><a href="#projects" onclick="moveTo('myProjects')">My Projects</a></li>
-                		<li><a href="#hobbies" onclick="moveTo('myHoobies')">My Hobbies</a></li>
+                		<li><a class="cursor-pointer" onclick="moveTo('aboutMe')">About me</a></li>
+                		<li><a class="cursor-pointer" onclick="moveTo('mySkills')">My Skills</a></li>
+                		<li><a class="cursor-pointer" onclick="moveTo('myProjects')">My Projects</a></li>
+                		<li><a class="cursor-pointer" onclick="moveTo('myHoobies')">My Hobbies</a></li>
               		</ul>
           		</div>
         	</nav>
@@ -56,19 +56,19 @@
      	</nav>
      	<div class="container center">
      		<div class="avatar-container p-61">
-  				<img src="images/img-android.jpg" alt="" class="avatar"/>
+  				<img src="images/img-android.jpg" class="avatar"/>
 			</div>
 			<div class="avatar-container p-60">
-  				<img src="images/img-java.jpg" alt="" class="avatar"/>
+  				<img src="images/img-java.jpg" class="avatar"/>
 			</div>
 			<div class="avatar-container p-65">
-  				<img src="images/img-git.jpg" alt="" class="avatar"/>
+  				<img src="images/img-git.jpg" class="avatar"/>
 			</div>
 			<div class="avatar-container p-40">
-  				<img src="images/img-html.jpg" alt="" class="avatar"/>
+  				<img src="images/img-html.jpg" class="avatar"/>
 			</div>
 			<div class="avatar-container p-30">
-  				<img src="images/img-css.jpg" alt="" class="avatar"/>
+  				<img src="images/img-css.jpg" class="avatar"/>
 			</div>
      	</div>
      </div>
@@ -150,31 +150,43 @@
      		<ul class="hobbies">
      			<li>     				
      				<a href="https://playoverwatch.com/es-es/" title="Overwatch">
-     					<img class="img-hobbies img-circle profile-image" src="images/img-ov.jpg" alt="">
+     					<img class="img-hobbies img-circle profile-image" src="images/img-ov.jpg">
      				</a>
      			</li>
      			<li>
      				<a href="http://www.animeid.tv/" title="Anime">
-     					<img class="img-hobbies img-circle profile-image" src="images/img-anime.jpg" alt="">
+     					<img class="img-hobbies img-circle profile-image" src="images/img-anime.jpg">
      				</a>
      			</li>
      			<li>
      				<a href="http://kisscartoon.se/" title="Cartoons">
-     					<img class="img-hobbies img-circle profile-image" src="images/img-cartoons.jpg" alt="">
+     					<img class="img-hobbies img-circle profile-image" src="images/img-cartoons.jpg">
      				</a>     				
      			</li>
      		</ul>
+
+            <!--Hobbies titles-->
+            <ul class="hobbies">
+                <li class="li-margin">                    
+                    Overwatch
+                </li>
+                <li class="li-margin">
+                    Anime
+                </li>
+                <li class="li-margin">
+                    Cartoons                   
+                </li>
+            </ul>
      	</div>
      </div>
 
-    <footer class="footer">
-  		<div class="container container-padding-top">
-  			<span class="text-muted">Baltazar Rodriguez Ramirez</span class="text-muted">
+    <footer class="footer container-padding-top">
+  		<div class="container">
+  			<span class="text-muted">Baltazar Rodriguez Ramirez</span>
   		</div>
 	</footer>
 
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 	<script src="js/javascript.js" type="text/javascript"></script>
-	<script src="js/load.js" type="text/javascript"></script>
 </body>
 </html>
