--- a/index.html
+++ b/index.html
@@ -182,7 +182,10 @@
 
     <footer class="footer container-padding-top">
   		<div class="container">
-  			<span class="text-muted">Baltazar Rodriguez Ramirez</span>
+            <h1 class="section-text-color">Contact</h1>
+  			<p class="text-white">Baltazar Rodriguez Ramirez</p>
+            <p class="text-white">Email: archer_baltazar@gmail.com</p>
+            <p class="text-white">Phone: 313-149-7567</p>
   		</div>
 	</footer>
 
